noinst_LIBRARIES = libccreg.a

libccreg_a_SOURCES = register.cc zone.cc blacklist.cc domain.cc registrar.cc \
		     object_impl.cc contact.cc nsset.cc auth_info.cc invoice.cc \
		     documents.cc bank.cc info_buffer.cc poll.cc common_impl.cc

libccreg_a_CPPFLAGS = $(POSTGRESQL_CFLAGS) $(BOOST_CFLAGS) $(AM_CPPFLAGS)
